Update docs and add qvalue dependency

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(colocMolecularQTLs)
 export(colocMolecularQTLsByRow)
 export(colocQtlGWAS)
 export(constructVariantRanges)
+export(dataFrameToGRanges)
 export(fastqtlTabixFetchGenes)
 export(importFastQTLTable)
 export(importQTLtoolsTable)
