--- a/environment.yml
+++ b/environment.yml
@@ -13,5 +13,6 @@ dependencies:
   - conda-forge::r-purrrlyr=0.0.4
   - conda-forge::r-assertthat=0.2.1
   - bioconda::r-coloc=3.1
+  - bioconda::tabix=0.2.6
   - bioconda::bioconductor-rsamtools=1.34.0
   - bioconda::bioconductor-qvalue=2.14.0
