Implement coloc workflow in nextflow

--- a/conf/coloc.config
+++ b/conf/coloc.config
@@ -1,11 +1,11 @@
 /*
  * ---------------------------------------------------------------------------
- *  Default parameters for the eQTL Catalogue genotype QC pipeline.
+ *  Default parameters for the colocWrapper colocalisation pipeline.
  * ---------------------------------------------------------------------------
  */
 
 params {
-  cisdistance = 1000000
-  n_batches = 200
-  outdir = "results"
+  cis_window = 200000
+  gwas_type = GWASCatalog
+  gwas_min_logp = 5
 }
