--- a/environment.yml
+++ b/environment.yml
@@ -14,5 +14,6 @@ dependencies:
   - conda-forge::r-assertthat=0.2.1
   - bioconda::r-coloc=3.1
   - bioconda::tabix=0.2.6
+  - bioconda::csvtk=0.18.2
   - bioconda::bioconductor-rsamtools=1.34.0
   - bioconda::bioconductor-qvalue=2.14.0
