--- a/nextflow.config
+++ b/nextflow.config
@@ -1,7 +1,5 @@
 params {
-    // Container slug. Stable releases should specify release tag!
-    //   Developmental code should specify :latest
-    container = 'kauralasoo/coloc-wrapper:latest'
+    container = 'kauralasoo/coloc-wrapper:1.0'
 
     outdir = './results'
     custom_config_version = 'master'
